[package]
name = "contract"
version = "0.1.0"
authors = ["George <george@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "0.7.6"
casper-types = "0.7.6"
serde_json = "1.0.63"

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]

[profile.release]
lto = true
