[package]
name = "tests"
version = "0.1.0"
authors = ["George-CL <george@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
casper-contract = "0.9.0"
casper-types = "0.9.0"
casper-engine-test-support = "0.9.0"

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-engine-test-support/test-support", "casper-contract/test-support"]
